# reactor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  build.ps1  premake5.lua  run.ps1  setup.ps1
shaders/: basic.slang  basic.vert  flat.slang  shaders.slang  sphere.slang  test.slang
src/: CMakeLists.txt  main.cpp
src/reactor/: buffer.cpp  buffer.h  commandbuffer.cpp  commandbuffer.h  debug.cpp  debug.h  engine.cpp  engine.h  file.h  geometry.cpp  geometry.h  gui.cpp  gui.h  image.cpp  image.h  log.cpp  log.h  pch.h  pipeline.cpp  pipeline.h  reactor.h  rmath.cpp  rmath.h  scene.cpp  scene.h  types.h  window.cpp  window.h
